versions/v2.14/modules/en/pages/cluster-deployment/infra-providers/aws/machine-configuration.adoc
= EC2 Machine Configuration Reference
ifeval::["{build-type}" != "srfa"]
:page-languages: [en, zh]
endif::[]
:revdate: 2025-12-10
:page-revdate: {revdate}
:community-path: reference-guides/cluster-configuration/downstream-cluster-configuration/machine-configuration/amazon-ec2.adoc 
:product-path: cluster-deployment/infra-providers/aws/machine-configuration.adoc
ifeval::["{build-type}" != "community"]
:xref-port-reqs: xref:installation-and-upgrade/requirements/port-requirements.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:xref-port-reqs: xref:getting-started/installation-and-upgrade/installation-requirements/port-requirements.adoc
endif::[]

For more details about EC2 nodes, refer to the official documentation for the https://aws.amazon.com/ec2[EC2 Management Console].

[#_basic_options]
== Basic Options

[#_region]
=== Region

The geographical https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/using-regions-availability-zones.html[region] in which to build your cluster.

[#_zone]
=== Zone

The https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/using-regions-availability-zones.html#concepts-availability-zones[zone], an isolated location within a region to build your cluster

[#_instance_type]
=== Instance Type

The https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/instance-types.html[instance type], which determines the hardware characteristics, used to provision your cluster.

[#_root_disk_size]
=== Root Disk Size

Configure the size (in GB) for your https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/RootDeviceStorage.html[root device].

[#_vpc_subnet]
=== VPC/Subnet

The https://docs.aws.amazon.com/vpc/latest/userguide/configure-your-vpc.html[VPC] or specific https://docs.aws.amazon.com/vpc/latest/userguide/configure-subnets.html[subnet], an IP range in your VPC, to add your resources to.

[#_iam_instance_profile_name]
=== IAM Instance Profile Name

The name of the https://docs.aws.amazon.com/IAM/latest/UserGuide/id_roles_use_switch-role-ec2_instance-profiles.html[instance profile] used to pass an IAM role to an EC2 instance.

[#_advanced_options]
== Advanced Options

[#_ami_id]
=== AMI ID

The https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/AMIs.html[Amazon Machine Image] used for the nodes in your cluster.

[#_ssh_username_for_ami]
=== SSH Username for AMI

The username for connecting to your launched instances. Refer to https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/connection-prereqs.html[here] for the default usernames to selected AMIs. For AMIs not listed, check with the AMI provider.

[#_security_group]
=== Security Group

Choose the default security group or configure a security group.

Please refer to {xref-port-reqs}#_rancher_aws_ec2_security_group[Amazon EC2 security group when using Node Driver] to see what rules are created in the `rancher-nodes` Security Group.

[#_ebs_root_volume_type]
=== EBS Root Volume Type

The https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/ebs-volume-types.html[EBS volume type] to use for the root device.

[#_encrypt_ebs_volume]
=== Encrypt EBS Volume

Enable https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/EBSEncryption.html[Amazon EBS Encryption].

[#_request_spot_instance]
=== Request Spot Instance

Enable option to https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/spot-requests.html[request spot instances] and specify the maximum instance price per hour you're willing to pay.

[#_use_only_private_address]
=== Use only private address

Enable option on use only https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/using-instance-addressing.html[private addresses].

[#_ebs_optimized_instance]
=== EBS-Optimized Instance

Use an https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/ebs-optimized.html[EBS-optimized instance].

[#_allow_access_to_ec2_metadata]
=== Allow access to EC2 metadata

Enable access to https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/ec2-instance-metadata.html[EC2 metadata].

[#_use_tokens_for_metadata]
=== Use tokens for metadata

Use https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/configuring-instance-metadata-service.html[Instance Metadata Service Version 2 (IMDSv2)], a token-based method to access metadata.

[#_add_tag]
=== Add Tag

Add metadata using https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/Using_Tags.html[tags] to categorize resources.

[#_ipv6_address_count]
=== IPv6 Address Count

Specify how many IPv6 addresses to assign to the instance’s network interface.

[#_ipv6_address_only]
=== IPv6 Address Only

Enable this option if the instance should use IPv6 exclusively. IPv6-only VPCs or subnets require this. When enabled, the instance has IPv6 as its sole address, and the IPv6 Address Count must be greater than zero.

[#_http_protocol_ipv6]
=== HTTP Protocol IPv6

Enable or disable IPv6 endpoints for the instance metadata service.

[#_enable_primary_ipv6]
=== Enable Primary IPv6

Enable this option to designate the first assigned IPv6 address as the primary address. This ensures a consistent, non-changing IPv6 address for the instance. It does not control whether IPv6 addresses are assigned.
